add runners from excel

--- a/app/views/home/add_runners_file.html.erb
+++ b/app/views/home/add_runners_file.html.erb
@@ -1,6 +1,4 @@
-<%= @error_hash %>
-
-<%= form_tag competition_file_path do %>
+<%= form_tag runner_file_path do %>
 <label for="id">File Path</label>
 <%= file_field_tag :path %>
 <%= submit_tag "Submit" %>
