--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -8,18 +8,35 @@
                 Database
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <%=link_to 'Clubs', clubs_path, class: "dropdown-item" %>
-                <%=link_to 'Runners', runners_path, class: "dropdown-item" %>
+                <%=link_to 'Clubs',        clubs_path,        class: "dropdown-item" %>
+                <%=link_to 'Runners',      runners_path,      class: "dropdown-item" %>
+                <%=link_to 'Competitions', competitions_path, class: "dropdown-item" %>
+                <%=link_to 'Results',      results_path,      class: "dropdown-item" %>
+                <%=link_to 'Categories',   categories_path,   class: "dropdown-item" %>
             </div>
         </li>
         <% if user_signed_in? %>
-        <li class="nav-item">
-            <%=link_to 'Add Club' , new_club_path, class: "nav-link" %>
+                    <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Add to Database
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <%=link_to 'Add Clubs',        new_club_path,        class: "dropdown-item" %>
+                <%=link_to 'Add Runners',      new_runner_path,      class: "dropdown-item" %>
+                <%=link_to 'Add Competitions', new_competition_path, class: "dropdown-item" %>
+                <%=link_to 'Add Results',      new_result_path,      class: "dropdown-item" %>
+
+                <%=link_to 'Add Competitions from file', competition_file_path, class: "dropdown-item" %>
+                <%=link_to 'Add Runners from file',      runner_file_path,      class: "dropdown-item" %>
+            </div>
         </li>
-         <li class="nav-item">
-            <%=link_to 'Add Runner' , new_runner_path, class: "nav-link" %>
-        </li>
+
+
+
         <% end %>
+        <li class="nav-item">
+            <%=link_to 'Compare 2 Runners' , compare_path, class: "nav-link" %>
+        </li>
         <li>
             <%=link_to 'About us', about_path, class: "nav-link" %>
         </li>
