--- a/app/views/runners/index.html.erb
+++ b/app/views/runners/index.html.erb
@@ -1,6 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Runners</h1>
+<h1 style="text-align:center; color:green">Runners</h1>
 
 <%= render 'runners', runners: @runners %>
 
