--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,31 +1,10 @@
-<p id="notice"><%= notice %></p>
+<h1 style="text-align:center; color:green">Categories</h1>
 
-<h1>Categories</h1>
+<% columns = ["name", "full_name", "points"] %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Full name</th>
-      <th>Points</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= render partial: '/layouts/index', :locals => { :columns => columns, :categories => @categories  } %>
 
-  <tbody>
-    <% @categories.each do |category| %>
-      <tr>
-        <td><%= category.name %></td>
-        <td><%= category.full_name %></td>
-        <td><%= category.points %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% if user_signed_in? %>
+<%= link_to 'New Category', new_category_path, class: "btn btn-info" %>
+<% end %>
 
-<br>
-
-<%= link_to 'New Category', new_category_path %>
