--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -10,7 +10,7 @@
 
 <%= render partial: '/layouts/show', :locals => { :elements => fields} %>
 
-<%= render partial: '/runners/runners' %>
+<%= render partial: '/layouts/index'%>
 
     <p class="lead">
         <% if user_signed_in? %>
