--- a/app/views/competitions/edit.html.erb
+++ b/app/views/competitions/edit.html.erb
@@ -1,6 +1,15 @@
 <h1>Editing Competition</h1>
+<% if user_signed_in? %>
 
 <%= render 'form', competition: @competition %>
+<br/>
 
-<%= link_to 'Show', @competition %> |
-<%= link_to 'Back', competitions_path %>
+<%= link_to 'Show', @competition, class: "btn btn-warning btn-sm"%>
+<% else %>
+ <p> You need to sign in to edit competition </p>
+<%=link_to 'Sign In', new_user_session_path, class: "btn btn-info btn-sm"%>
+ <%=link_to 'Sign Up', new_user_registration_path, class: "btn btn-success btn-sm" %>
+<% end %>
+
+<%= link_to 'Back', competitions_path, class: "btn btn-danger btn-sm"%>
+
