add club and runner from competition file

--- a/app/views/home/add_competition_file.html.erb
+++ b/app/views/home/add_competition_file.html.erb
@@ -6,8 +6,8 @@
 <%= submit_tag "Submit" %>
 <% end %>
 <% if @success || @fail%>
-<p>success: <%= @success %></p>
-<p>fail: <%= @fail %></p>
+<p>success: <%= @success_runner %></p>
+<p>fail: <%= @fail_runner %></p>
 <% end %>
 
 
