--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,7 +6,7 @@
 ]
 %>
 <%= render partial: '/layouts/show', :locals => { :elements => fields} %>
-
+<%= render partial: '/layouts/index'%>
 
     <p class="lead">
         <% if user_signed_in? %>
