--- a/app/views/competitions/show.html.erb
+++ b/app/views/competitions/show.html.erb
@@ -9,6 +9,8 @@
 %>
 <%= render partial: '/layouts/show', :locals => { :elements => fields} %>
 
+<%= render partial: '/layouts/index'%>
+
     <p class="lead">
         <% if user_signed_in? %>
         <%= link_to 'Edit', edit_competition_path(@competition), class: "btn btn-success btn-sm" %>
