update migration order

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
 <h1>Welcome to the orienteering database </h1>
-
+<h1>We have <%=link_to "#{@runners_count} runners", runners_path %> from <%=link_to "#{@clubs_count} clubs", clubs_path %>
