--- a/app/views/home/add_runners_file.html.erb
+++ b/app/views/home/add_runners_file.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag runner_file_path do %>
+<%= form_tag runner_file_path, multipart: true do %>
 <label for="id">File Path</label>
 <%= file_field_tag :path %>
 <%= submit_tag "Submit" %>
