add competition and result to add runner page

--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -26,7 +26,7 @@
         end
         [string[0..-2], element.id]
     end %>
-    <%= form.select "#{el.first}_id".to_sym, array, class: "form-control" %>
+    <%= form.select "#{el.first}_id".to_sym, array,  {}, {onChange: "myFunction(this.options[this.selectedIndex].innerHTML)"}%>
     <% when "duration" %>
     <%= form.label :hours %>
     <%= form.number_field :hours %>
@@ -35,12 +35,50 @@
     <%= form.label :seconds %>
     <%= form.number_field :seconds %>
     <% when "select" %>
-        <%= form.select el.first.to_sym, el[1],{}, {onChange: "myFunction(this.options[this.selectedIndex].innerHTML)"} %>
+        <%= form.select el.first.to_sym, el[1], {}, {onChange: "myFunction(this.options[this.selectedIndex].innerHTML)"} %>
     <% else %>
     <%= form.method("#{el.last}_field").call el.first.to_sym, class: "form-control"  %>
     <% end %>
 </div>
 <% end %>
+<hr>
+<% if defined?(extra) %>
+<div id="create-competition" hidden>
+    <h2>Add Category Information</h2>
+<% extra.each do |el| %>
+<div class="field form-group">
+    <%= form.label el.first.to_sym, class: "form-control" %>
+    <% case el.last
+    when "date" %>
+    <%= form.date_select el.first.to_sym, start_year: el[1].first, end_year: el[1].last, class: "form-control" %>
+    <% when "id" %>
+    <% array = el[1].map do |element|
+        string = ""
+        el[2].each do |meth_name|
+         string += "#{element.method(meth_name).call} "
+        end
+        [string[0..-2], element.id]
+    end %>
+    <%= form.select "#{el.first}_id".to_sym, array,  {}, {onChange: "myFunction(this.options[this.selectedIndex].innerHTML)"}%>
+    <% when "duration" %>
+    <%= form.label :hours %>
+    <%= form.number_field :hours %>
+    <%= form.label :minutes %>
+    <%= form.number_field :minutes %>
+    <%= form.label :seconds %>
+    <%= form.number_field :seconds %>
+    <% when "select" %>
+        <%= form.select el.first.to_sym, el[1], {}, {onChange: "myFunction(this.options[this.selectedIndex].innerHTML)"} %>
+    <% else %>
+    <%= form.method("#{el.last}_field").call el.first.to_sym, class: "form-control"  %>
+    <% end %>
+</div>
+<% end %>
+</div>
+<% end %>
+
+
+
 <div class="actions">
     <%= form.submit class: "btn btn-success"%>
 </div>
