--- a/app/views/runners/_form.html.erb
+++ b/app/views/runners/_form.html.erb
@@ -8,7 +8,13 @@
     }
 
     function myFunction(text) {
-      document.getElementById("test").innerHTML = text
+
+      aaa = document.getElementById("runner_category_id").value;
+      if (aaa != "11") {
+        show();
+
+      } else { hide() }
+
     }
   </script>
 
@@ -16,44 +22,23 @@
     ["name", "text"],
     ["surname", "text"],
     ["gender", ["M", "W"], "select"],
-    ["date", [Date.today.year, Date.today.year - 80], "date"],
+    ["dob", [Date.today.year, Date.today.year - 80], "date"],
     ["category", @categories,["full_name"], "id"],
     ["club", @clubs, ["name"], "id"]
 
   ]%>
-  <%= render partial: '/layouts/form', :locals => { :elements => fields, :model => runner} %>
 
-  <% competition_fields = [
-  ["name", "text"],
+  <% extra_fields = [
+  ["competition_name", "text"],
   ["date", [], "date"],
   ["location", "text"],
   ["country", "text"],
   ["group", "text"],
   ["distance_type", "text"],
-  ["rang", "text"]
+  ["rang", "text"],
+  ["place", "number"],
+  ["duration"]
 ] %>
-<div id="create-competition">
-<hr>
+<%= render partial: '/layouts/form', :locals => { :elements => fields, :model => runner, :extra => extra_fields} %>
 
-<%= render partial: '/layouts/form', :locals => { :elements => competition_fields, :model => Competition.new} %>
-</div>
 
-<button onclick="hide()">Hide</button>
-<button onclick="show()">Show</button>
-
-<label for="cars">Choose a car:</label>
-<%= form_with(model: runner) do |form| %>
-
-<%= form.label :gender, class: "form-control" %>
-
-<%= form.select :gender, ["M", "F"],{}, {onChange: "myFunction(this.options[this.selectedIndex].innerHTML)"}%>
-<% end %>
-
-<select name="cars" id="cars" onChange="myFunction(this.options[this.selectedIndex].innerHTML)">
-  <option value="volvo">Volvo</option>
-  <option value="saab">Saab</option>
-  <option value="mercedes">Mercedes</option>
-  <option value="audi">Audi</option>
-</select>
-
-<p id="test">test </p>
