update excel fields, fix destrois, fix path on html file

--- a/app/views/home/add_competition_file.html.erb
+++ b/app/views/home/add_competition_file.html.erb
@@ -1,6 +1,5 @@
 <%= @error_hash %>
-
-<%= form_tag competition_file_path do %>
+<%= form_tag competition_file_path, multipart: true  do %>
 <label for="id">File Path</label>
 <%= file_field_tag :path %>
 <%= submit_tag "Submit" %>
