--- a/app/views/runners/_show.html.erb
+++ b/app/views/runners/_show.html.erb
@@ -6,7 +6,6 @@
 ]
 
 %>
-
 <%= render partial: '/layouts/show', :locals => { :elements => fields} %>
-
 <%= render partial: '/layouts/index'%>
+<%= render partial: '/layouts/show_actions', :locals => { :element => fields.first} %>
