--- a/app/views/competitions/show.html.erb
+++ b/app/views/competitions/show.html.erb
@@ -8,12 +8,5 @@
 
 %>
 <%= render partial: '/layouts/show', :locals => { :elements => fields} %>
-
 <%= render partial: '/layouts/index'%>
-
-    <p class="lead">
-        <% if user_signed_in? %>
-        <%= link_to 'Edit', edit_competition_path(@competition), class: "btn btn-success btn-sm" %>
-        <% end %>
-        <%= link_to 'Back', competitions_path, class: "btn btn-danger btn-sm" %>
-    </p>
+<%= render partial: '/layouts/show_actions', :locals => { :element => fields.first} %>
