--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -80,6 +80,7 @@
 
 
 <div class="actions">
-    <%= form.submit class: "btn btn-success"%>
+    <%= form.submit class: "btn btn-success btn-sm"%>
+    <%= link_to 'Back', request.referer, class: "btn btn-secondary btn-sm" %>
 </div>
 <% end %>
