--- a/app/views/runners/new.html.erb
+++ b/app/views/runners/new.html.erb
@@ -8,4 +8,4 @@
 <%=link_to 'Sign In', new_user_session_path, class: "btn btn-info btn-sm" %>
 <%=link_to 'Sign Up', new_user_registration_path, class: "btn btn-success btn-sm" %>
 <% end %>
-<%= link_to 'Back', runners_path, class: "btn btn-danger" %>
+<%= @aaa %>
